--- a/planosDeAula.html
+++ b/planosDeAula.html
@@ -21,53 +21,55 @@
 </head>
 
 <body class="text-monospace">
+
   <!-- Cabeçalho-->
+  <header class="container-fluid p-3 text-white BGMarinho">
 
-  <header class="p-3 text-white container BGMarinho">
     <!-- inicio navbar-->
-    <div>
-      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-          <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
-            <use xlink:href="#bootstrap"></use>
-          </svg>
-        </a>
 
-        <a class="navbar-brand" href="./index.html"><img src="imagens/logoClaro_152x72.png" alt="logo plano A"></a>
+    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+      <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+        <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
+          <use xlink:href="#bootstrap"></use>
+        </svg>
+      </a>
 
-        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 fs-5">
-
-          <li><a href="./index.html" class="nav-link px-3 text-white">Home</a></li>
-          <li><a href="./planosDeAula.html" class="nav-link px-3 text-white">Planos de Aula</a></li>
-          <li><a href="./perguntasFrequentes.html" class="nav-link px-3 text-white">Perguntas Frequentes</a></li>
-          <li><a href="./sobreNos.html" class="nav-link px-3 text-white">Sobre Nós</a></li>
-          <li><a href="./contato.html" class="nav-link px-3 text-white">Contato</a></li>
-        </ul>
-
-        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-          <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
-        </form>
-
-        <div class="text-end">
+      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 fs-5">
+        <li><a class="navbar-brand" href="./index.html"><img src="imagens/logoClaro_152x72.png" alt="logo plano A"></a>
+        </li>
+        <li><a href="./index.html" class="nav-link px-3 text-white">Home</a></li>
+        <li><a href="./planosDeAula.html" class="nav-link px-3 text-white">Planos de Aula</a></li>
+        <li><a href="./perguntasFrequentes.html" class="nav-link px-3 text-white">Perguntas Frequentes</a></li>
+        <li><a href="./sobreNos.html" class="nav-link px-3 text-white">Sobre Nós</a></li>
+        <li><a href="./contato.html" class="nav-link px-3 text-white">Contato</a></li>
+        <li>
+          <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+            <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
+          </form>
+        </li>
+        <li>
           <button type="button" class="btn" id="BGLaranja">Login</button>
           <button type="button" class="btn" id="BGAzulBB">Sign-up</button>
-        </div>
-      </div>
+        </li>
+      </ul>
     </div>
+
   </header>
 
+
   <main align="center">
+
     <!-- inicio do jumbotron Principal-->
-    <div class="mt-4 p-5 text-black rounded container BGAzulBB">
-      <h1 class="display-5 fw-bold text-center text-white">Planos de aula</h1>
+    <div class="container-fluid mt-4 p-5 text-black rounded">
+      <h1 class="display-5 fw-bold text-center textoMarinho">Planos de Aula</h1>
     </div>
 
     <!-- inicio do jumbotron Por disciplina-->
-    <div class="mt-4 p-5 BGLaranja text-white rounded container">
+    <div class="container-fluid mt-4 p-5 BGLaranja text-white rounded">
       <h2 class="display-5 fw-bold text-center textoMarinho">Por Disciplina</h2>
     </div>
 
-    <section class="container">
+    <section class="container-fluid">
       <br>
       <!-- inicio cards de opçoes-->
 
@@ -103,7 +105,7 @@
         </div>
       </div> <!-- fim da linha 1 dos cards de opçoes-->
 
-      <div class="row">      
+      <div class="row">
         <div class="col">
           <!-- coluna 3-->
           <div class="card">
@@ -166,89 +168,16 @@
           </div>
         </div>
 
-      <div class="row">
-        <div class="col">
-          <!-- coluna 3-->
-          <div class="card">
-            <img src="./imagens/planosDeAula/artes.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Artes</h5>
-              <h6 class="card-title">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, perspiciatis
-                minima magnam ea suscipit mollitia voluptatibus commodi! Facere</h6>
-              <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, perspiciatis
-                minima magnam ea suscipit mollitia voluptatibus commodi! Facere</p>
-              <a href="#"><button class="btn  btn-lg" id="BGAzulBB" type="submit">Acessar Planos!</button></a>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <!-- coluna 4-->
-          <div class="card">
-            <img src="./imagens/planosDeAula/English.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Inglês</h5>
-              <h6 class="card-title">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, perspiciatis
-                minima magnam ea suscipit mollitia voluptatibus commodi! Facere</h6>
-              <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, perspiciatis
-                minima magnam ea suscipit mollitia voluptatibus commodi! Facere</p>
-              <a href="#"><button class="btn  btn-lg" id="BGAzulBB" type="submit">Acessar Planos!</button></a>
-            </div>
-          </div>
-        </div>
-      </div>
- 
-      <!-- fim da linha 1 dos cards de opçoes-->
-
-      <!-- inicio do jumbotron Por ano-->
-
-      <div class="mt-4 p-5 BGLaranja text-white rounded container">
-        <h2 class="display-5 fw-bold text-center textoMarinho">Por Ano</h2>
-      </div>
-
-      <section class="container">
-        <br>
-        <!-- inicio cards de opçoes-->
-
-        <div class="row">
-          <!-- linha 1 dos cards de opçoes-->
-          <div class="col">
-            <!-- coluna 1-->
-            <div class="card">
-              <img src="./imagens/planosDeAula/6°.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">6º Ano</h5>
-                <h6 class="card-title">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium,
-                  perspiciatis minima magnam ea suscipit mollitia voluptatibus commodi! Facere</h6>
-                <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, perspiciatis
-                  minima magnam ea suscipit mollitia voluptatibus commodi! Facere</p>
-                <a href="#"><button class="btn  btn-lg" id="BGAzulBB" type="submit">Acessar Planos!</button></a>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <!-- coluna 2-->
-            <div class="card">
-              <img src="./imagens/planosDeAula/7°.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">7º Ano</h5>
-                <h6 class="card-title">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium,
-                  perspiciatis minima magnam ea suscipit mollitia voluptatibus commodi! Facere</h6>
-                <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, perspiciatis
-                  minima magnam ea suscipit mollitia voluptatibus commodi! Facere</p>
-                <a href="#"><button class="btn  btn-lg" id="BGAzulBB" type="submit">Acessar Planos!</button></a>
-              </div>
-            </div>
-          </div>
-
         <div class="row">
           <div class="col">
             <!-- coluna 3-->
             <div class="card">
-              <img src="./imagens/planosDeAula/8°.jpg" class="card-img-top" alt="...">
+              <img src="./imagens/planosDeAula/artes.jpg" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">8º Ano</h5>
+                <h5 class="card-title">Artes</h5>
                 <h6 class="card-title">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium,
-                  perspiciatis minima magnam ea suscipit mollitia voluptatibus commodi! Facere</h6>
+                  perspiciatis
+                  minima magnam ea suscipit mollitia voluptatibus commodi! Facere</h6>
                 <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, perspiciatis
                   minima magnam ea suscipit mollitia voluptatibus commodi! Facere</p>
                 <a href="#"><button class="btn  btn-lg" id="BGAzulBB" type="submit">Acessar Planos!</button></a>
@@ -258,11 +187,12 @@
           <div class="col">
             <!-- coluna 4-->
             <div class="card">
-              <img src="./imagens/planosDeAula/9°.jpg" class="card-img-top" alt="...">
+              <img src="./imagens/planosDeAula/English.png" class="card-img-top" alt="...">
               <div class="card-body">
-                <h5 class="card-title">9º Ano</h5>
+                <h5 class="card-title">Inglês</h5>
                 <h6 class="card-title">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium,
-                  perspiciatis minima magnam ea suscipit mollitia voluptatibus commodi! Facere</h6>
+                  perspiciatis
+                  minima magnam ea suscipit mollitia voluptatibus commodi! Facere</h6>
                 <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium, perspiciatis
                   minima magnam ea suscipit mollitia voluptatibus commodi! Facere</p>
                 <a href="#"><button class="btn  btn-lg" id="BGAzulBB" type="submit">Acessar Planos!</button></a>
@@ -271,41 +201,119 @@
           </div>
         </div>
 
-        </div> <!-- fim da linha 1 dos cards de opçoes-->
-      </section>
+        <!-- fim da linha 1 dos cards de opçoes-->
+
+        <!-- inicio do jumbotron Por ano-->
+
+        <div class="mt-4 p-5 BGLaranja text-white rounded container">
+          <h2 class="display-5 fw-bold text-center textoMarinho">Por Ano</h2>
+        </div>
+
+        <section class="container">
+          <br>
+          <!-- inicio cards de opçoes-->
+
+          <div class="row">
+            <!-- linha 1 dos cards de opçoes-->
+            <div class="col">
+              <!-- coluna 1-->
+              <div class="card">
+                <img src="./imagens/planosDeAula/6°.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">6º Ano</h5>
+                  <h6 class="card-title">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium,
+                    perspiciatis minima magnam ea suscipit mollitia voluptatibus commodi! Facere</h6>
+                  <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium,
+                    perspiciatis
+                    minima magnam ea suscipit mollitia voluptatibus commodi! Facere</p>
+                  <a href="#"><button class="btn  btn-lg" id="BGAzulBB" type="submit">Acessar Planos!</button></a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <!-- coluna 2-->
+              <div class="card">
+                <img src="./imagens/planosDeAula/7°.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">7º Ano</h5>
+                  <h6 class="card-title">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium,
+                    perspiciatis minima magnam ea suscipit mollitia voluptatibus commodi! Facere</h6>
+                  <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium,
+                    perspiciatis
+                    minima magnam ea suscipit mollitia voluptatibus commodi! Facere</p>
+                  <a href="#"><button class="btn  btn-lg" id="BGAzulBB" type="submit">Acessar Planos!</button></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col">
+                <!-- coluna 3-->
+                <div class="card">
+                  <img src="./imagens/planosDeAula/8°.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">8º Ano</h5>
+                    <h6 class="card-title">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium,
+                      perspiciatis minima magnam ea suscipit mollitia voluptatibus commodi! Facere</h6>
+                    <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium,
+                      perspiciatis
+                      minima magnam ea suscipit mollitia voluptatibus commodi! Facere</p>
+                    <a href="#"><button class="btn  btn-lg" id="BGAzulBB" type="submit">Acessar Planos!</button></a>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <!-- coluna 4-->
+                <div class="card">
+                  <img src="./imagens/planosDeAula/9°.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">9º Ano</h5>
+                    <h6 class="card-title">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium,
+                      perspiciatis minima magnam ea suscipit mollitia voluptatibus commodi! Facere</h6>
+                    <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium,
+                      perspiciatis
+                      minima magnam ea suscipit mollitia voluptatibus commodi! Facere</p>
+                    <a href="#"><button class="btn  btn-lg" id="BGAzulBB" type="submit">Acessar Planos!</button></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div> <!-- fim da linha 1 dos cards de opçoes-->
+        </section>
 
     </section> <!-- fim dos cards de opçoes-->
 
   </main>
 
-  <footer>
-    <div class="p-3 BGMarinho text-white container">
-    
-      <section class="text-center text-lg-start BGLaranja rounded">
-        <div class="container d-flex justify-content-center py-5">
-          <button type="button" active class="btn btn-secondary btn-lg btn-floating mx-2 BGMarinho" id="btn-Marinho">
-            <i class="bi bi-facebook"></i>
-          </button>
-          <button type="button" active class="btn btn-secondary btn-lg btn-floating mx-2 BGMarinho" id="btn-Marinho">
-            <i class="bi bi-youtube"></i>
-          </button>
-          <button type="button" active class="btn btn-secondary btn-lg btn-floating mx-2 BGMarinho" id="btn-Marinho">
-            <i class="bi bi-instagram"></i>
-          </button>
-          <button type="button" active class="btn btn-secondary btn-lg btn-floating mx-2 BGMarinho" id="btn-Marinho">
-            <i class="bi bi-twitter"></i>
-          </button>
-        </div>
 
-        <!-- Copyright -->
-        <div class="text-center text-white p-3 BGAmarelo rounded">
-          <p style="color:black;">© 2022 Squad 41</p>
-          <a class="text-white" href=" "></a>
-        </div>
-      </section>
+  <footer class="container-fluid p-3 BGMarinho text-white">
 
-    </div>
+    <section class="text-center text-lg-start BGLaranja rounded">
+      <div class="container d-flex justify-content-center py-5">
+        <button type="button" class="btn btn-secondary btn-lg mx-2 BGMarinho">
+          <i class="bi bi-facebook"></i>
+        </button>
+        <button type="button" class="btn btn-secondary btn-lg mx-2 BGMarinho">
+          <i class="bi bi-youtube"></i>
+        </button>
+        <button type="button" class="btn btn-secondary btn-lg mx-2 BGMarinho">
+          <i class="bi bi-instagram"></i>
+        </button>
+        <button type="button" class="btn btn-secondary btn-lg mx-2 BGMarinho">
+          <i class="bi bi-twitter"></i>
+        </button>
+      </div>
+
+      <!-- Copyright -->
+      <div class="text-center text-white p-3 BGAmarelo rounded">
+        <p style="color:black;">© 2022 Squad 41</p>
+        <a class="text-white" href=" "></a>
+      </div>
+    </section>
+
   </footer>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
