--- a/sobreNos.html
+++ b/sobreNos.html
@@ -11,60 +11,56 @@
   <!--Icones Bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    
+
   <!--Css CDN-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel='stylesheet' type='text/css' media='screen' href='estilo.css'>
-
 </head>
+
 
 <body class="text-monospace">
 
   <!-- Cabeçalho-->
+  <header class="container-fluid p-3 text-white BGMarinho">
 
-  <header class="p-3 text-white container BGMarinho">
     <!-- inicio navbar-->
-    <div>
-      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-          <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
-            <use xlink:href="#bootstrap"></use>
-          </svg>
-        </a>
+    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+      <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+        <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
+          <use xlink:href="#bootstrap"></use>
+        </svg>
+      </a>
 
-        <a class="navbar-brand" href="./index.html"><img src="imagens/logoClaro_152x72.png" alt="logo plano A"></a>
-
-        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 fs-5">
-
-          <li><a href="./index.html" class="nav-link px-3 text-white">Home</a></li>
-          <li><a href="./planosDeAula.html" class="nav-link px-3 text-white">Planos de Aula</a></li>
-          <li><a href="./perguntasFrequentes.html" class="nav-link px-3 text-white">Perguntas Frequentes</a></li>
-          <li><a href="./sobreNos.html" class="nav-link px-3 text-white">Sobre Nós</a></li>
-          <li><a href="./contato.html" class="nav-link px-3 text-white">Contato</a></li>
-        </ul>
-
-        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-          <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
-        </form>
-
-        <div class="text-end">
+      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0 fs-5">
+        <li><a class="navbar-brand" href="./index.html"><img src="imagens/logoClaro_152x72.png" alt="logo plano A"></a>
+        </li>
+        <li><a href="./index.html" class="nav-link px-3 text-white">Home</a></li>
+        <li><a href="./planosDeAula.html" class="nav-link px-3 text-white">Planos de Aula</a></li>
+        <li><a href="./perguntasFrequentes.html" class="nav-link px-3 text-white">Perguntas Frequentes</a></li>
+        <li><a href="./sobreNos.html" class="nav-link px-3 text-white">Sobre Nós</a></li>
+        <li><a href="./contato.html" class="nav-link px-3 text-white">Contato</a></li>
+        <li>
+          <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+            <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
+          </form>
+        </li>
+        <li>
           <button type="button" class="btn" id="BGLaranja">Login</button>
           <button type="button" class="btn" id="BGAzulBB">Sign-up</button>
-        </div>
-      </div>
+        </li>
+      </ul>
     </div>
   </header>
 
 
-
   <main>
     <section>
-      <div class="container py-5 p-3 ">
-        <br>
-        <h1 class="display-5 fw-bold text-center textoMarinho">Sobre Nós</h1>
-        <br>
+      <div class="container py-5 p-3">
+        <div class="container-fluid mt-4 p-5 text-black rounded">
+          <h1 class="display-5 fw-bold text-center textoMarinho">Sobre Nós</h1>
+        </div>
         <p class="textoNeutroCinza text-center text-monospace fs-4">Nós, da Plano A, acreditamos que os planos para um
           futuro
           melhor, passam pela democratização do conhecimento.
@@ -77,7 +73,7 @@
     </section>
 
     <section>
-      <div class="container py-5 p-3 background-color-white">
+      <div class="container py-5 p-3">
         <div class="row fs-1 textoMarinho">
           <div class="col-lg-4 text-center">
             <i class="bi bi-pencil-fill"></i>
@@ -102,34 +98,34 @@
     </section>
   </main>
 
-  <footer>
-    <div class="p-3 BGMarinho text-white container">
 
-      <section class="text-center text-lg-start BGLaranja rounded">
-        <div class="container d-flex justify-content-center py-5">
-          <button type="button" active class="btn btn-secondary btn-lg btn-floating mx-2 BGMarinho" id="btn-Marinho">
-            <i class="bi bi-facebook"></i>
-          </button>
-          <button type="button" active class="btn btn-secondary btn-lg btn-floating mx-2 BGMarinho" id="btn-Marinho">
-            <i class="bi bi-youtube"></i>
-          </button>
-          <button type="button" active class="btn btn-secondary btn-lg btn-floating mx-2 BGMarinho" id="btn-Marinho">
-            <i class="bi bi-instagram"></i>
-          </button>
-          <button type="button" active class="btn btn-secondary btn-lg btn-floating mx-2 BGMarinho" id="btn-Marinho">
-            <i class="bi bi-twitter"></i>
-          </button>
-        </div>
-        
-        <!-- Copyright -->
-        <div class="text-center text-white p-3 BGAmarelo rounded">
-          <p style="color:black;">© 2022 Squad 41</p>
-          <a class="text-white" href=" "></a>
-        </div>
-      </section>
+  <footer class="container-fluid p-3 BGMarinho text-white">
 
-    </div>
+    <section class="text-center text-lg-start BGLaranja rounded">
+      <div class="container d-flex justify-content-center py-5">
+        <button type="button" class="btn btn-secondary btn-lg mx-2 BGMarinho">
+          <i class="bi bi-facebook"></i>
+        </button>
+        <button type="button" class="btn btn-secondary btn-lg mx-2 BGMarinho">
+          <i class="bi bi-youtube"></i>
+        </button>
+        <button type="button" class="btn btn-secondary btn-lg mx-2 BGMarinho">
+          <i class="bi bi-instagram"></i>
+        </button>
+        <button type="button" class="btn btn-secondary btn-lg mx-2 BGMarinho">
+          <i class="bi bi-twitter"></i>
+        </button>
+      </div>
+
+      <!-- Copyright -->
+      <div class="text-center text-white p-3 BGAmarelo rounded">
+        <p style="color:black;">© 2022 Squad 41</p>
+        <a class="text-white" href=" "></a>
+      </div>
+    </section>
+
   </footer>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
