--- a/perguntasFrequentes.html
+++ b/perguntasFrequentes.html
@@ -97,7 +97,7 @@
   </main>
 
 
-  <footer class="p-3 BGMarinho text-white container">
+  <footer class="container-fluid p-3 BGMarinho text-white">
 
     <section class="text-center text-lg-start BGLaranja rounded"">
         <div class=" container d-flex justify-content-center py-5">
