--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </ol>
         <div class="carousel-inner" role="listbox">
           <div class="carousel-item active">
-            <img src="./imagens/index/graduacao_1366x768.jpg" alt="First slide">
+            <img src="./imagens/index/graduacao_1366x768.jpg" alt="First slide" style="width:100%">
             <div class="carousel-caption-amarelo">
               <h5 id="item-carousel-titulo" class="textoBranco"><strong>Eleve suas turmas a outro patamar!</strong></h5>
               <p id="item-carousel-paragrafo" class="textoBranco"><em>Seja responsável pelo sucesso e sinta orgulho
@@ -76,7 +76,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./imagens/index/cadernos_1366x768.jpg" alt="Second slide">
+            <img src="./imagens/index/cadernos_1366x768.jpg" alt="Second slide" style="width:100%">
             <div class="carousel-caption-azulBB d-md-inline-block">
               <h5 id="item-carousel-titulo" class="textoMarinho"><strong>Testemunhe um maior rendimento em sala de
                   aula!</strong></h5>
@@ -85,7 +85,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./imagens/index/teacher-zhu_1366x768.jpg" alt="Third slide">
+            <img src="./imagens/index/teacher-zhu_1366x768.jpg" alt="Third slide" style="width:100%">
             <div class="carousel-caption-azul">
               <h5 id="item-carousel-titulo" class="textoAmarelo"><strong>De professores para professores!</strong></h5>
               <p id="item-carousel-paragrafo" class="textoAmarelo"><em>Colabore, crie, comente, aperfeiçoe, incentive e
